--- a/cultural.html
+++ b/cultural.html
@@ -44,82 +44,87 @@
 <body>
     <!-- header -->
     <header id="home">
-        <div class="container">
-            <div class="header d-lg-flex justify-content-between align-items-center py-sm-3 py-2 px-sm-2 px-1">
-                <!-- logo -->
-                <div id="logo">
-                    <h1><a href="index.html"></a></h1>
-                </div>
-                <!-- //logo -->
-                <!-- nav -->
-                <div class="nav_amum-mkls ml-lg-5">
-                    <nav>
-                      <label for="drop" class="toggle"> <span class="fa fa-bars"></span></label>
-                        <input type="checkbox" id="drop" />
-                        <ul class="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="portfolio.html">Historical Sites</a></li>
-                            <li>
-                                    <!-- First Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="#">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                        <li><a href="http://utpp.edu.mx/" class="drop-text">UTPP</a></li>
-                                        <li><a href="http://ceuno.com.mx/portal/" class="drop-text">CEUNO</a></li>
-                                        <li><a href="http://itspp.edu.mx/" class="drop-text">ITSPP</a></li>
-                                        <li><a href="https://contactanos.unidep.mx/" class="drop-text">UNIDEP</a></li>
-                                    </ul>
-                                </li>
+        <ul class="menu float-right menu-login-ul">
+                <li class="menu-login-li">
+                        <a href="login.html" class="reqe-button text-uppercase">Login</a>
+                        <a href="register.html" class="reqe-button text-uppercase">Register</a>
+                </li>
+        </ul>
+            <div class="container">
+                <div class="header d-lg-flex justify-content-between align-items-center py-sm-3 py-2 px-sm-2 px-1">
+                    <!-- logo -->
+                    <div id="logo">
+                        <h1><a href="index.html"></a></h1>
+                    </div>
+                    <!-- //logo -->
+                    <!-- nav -->
+                    <div class="nav_amum-mkls ml-lg-5">
+                        <nav>
+                            <label for="drop" class="toggle"> <span class="fa fa-bars"></span></label>
+                            <input type="checkbox" id="drop" />
+                            <ul class="menu">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="portfolio.html">Historical Sites</a></li>
                                 <li>
-                                    <!-- Second Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="trade.html">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                        <li><a href="#Fishing & Food Processing" class="drop-text">Fishing/Food Processing</a></li>
-                                        <li><a href="#Industry" class="drop-text">Industry</a></li>
-                                        <li><a href="#Tourism" class="drop-text">Tourism</a></li>
-                                        <li><a href="#Commerce" class="drop-text">Commerce</a></li>
-                                        <li><a href="#Living" class="drop-text">Living</a></li>></li>
-                                    </ul>
-                                    <li>
-                                        <!-- third Tier Drop Down -->
-                                        <label for="drop-2" class="toggle toogle-2">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                        <!-- First Tier Drop Down -->
+                                        <label for="drop-2" class="toggle toogle-2">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span>
                                         </label>
-                                        <a href="cultural.html">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                        <a href="#">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                         <input type="checkbox" id="drop-2" />
                                         <ul>
-                                          <li><a href="calendar.html" class="drop-text">Calendar</a></li>
-                                          <li><a href="gallery.html" class="drop-text">Galleries</a></li>
-                                          <li><a href="festivals.html" class="drop-text">Festivals</a></li>
+                                            <li><a href="http://utpp.edu.mx/" class="drop-text">UTPP</a></li>
+                                            <li><a href="http://ceuno.com.mx/portal/" class="drop-text">CEUNO</a></li>
+                                            <li><a href="http://itspp.edu.mx/" class="drop-text">ITSPP</a></li>
+                                            <li><a href="https://contactanos.unidep.mx/" class="drop-text">UNIDEP</a></li>
                                         </ul>
                                     </li>
                                     <li>
-                                    <!-- Fourth Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="#">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                        <li><a href="#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
-                                        <li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
-                                        <li><a href="#City Directory" class="drop-text">City Directory</a></li>
-                                        <li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
-                                        <li><a href="#Mobile Consulate" class="drop-text">Mobile Consulate</a></li>
-                                    </ul>
-                                </li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </nav>
+                                        <!-- Second Tier Drop Down -->
+                                        <label for="drop-2" class="toggle toogle-2">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                        </label>
+                                        <a href="trade.html">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                        <input type="checkbox" id="drop-2" />
+                                        <ul>
+                                            <li><a href="trade.html#Fishing&FoodProcessing" class="drop-text">Fishing/Food Processing</a></li>
+                                            <li><a href="trade.html#Industry" class="drop-text">Industry</a></li>
+                                            <li><a href="trade.html#Tourism" class="drop-text">Tourism</a></li>
+                                            <li><a href="trade.html#Commerce" class="drop-text">Commerce</a></li>
+                                            <li><a href="trade.html#Living" class="drop-text">Living</a></li>></li>
+                                        </ul>
+                                        <li>
+                                            <!-- third Tier Drop Down -->
+                                            <label for="drop-2" class="toggle toogle-2">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                            </label>
+                                            <a href="cultural.html">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                            <input type="checkbox" id="drop-2" />
+                                            <ul>
+                                                <li><a href="calendar.html" class="drop-text">Calendar</a></li>
+                                                <li><a href="gallery.html" class="drop-text">Galleries</a></li>
+                                                <li><a href="festivals.html" class="drop-text">Festivals</a></li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                        <!-- Fourth Tier Drop Down -->
+                                        <label for="drop-2" class="toggle toogle-2">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                        </label>
+                                        <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                        <input type="checkbox" id="drop-2" />
+                                        <ul>
+                                                <li><a href="services.html#InmigrationAdvise" class="drop-text">Immigration Advise</a></li>
+                                                <li><a href="services.html#EmergencyAssistance" class="drop-text">Emergency Assistance</a></li>
+                                                <li><a href="services.html#CityDirectory" class="drop-text">City Directory</a></li>
+                                                <li><a href="services.html#OpeningaBussiness" class="drop-text">Opening a Bussiness</a></li>
+                                                <li><a href="services.html#MobileConsulate" class="drop-text">Mobile Consulate</a></li>
+                                        </ul>
+                                    </li>
+                                <li><a href="contact.html">Contact Us</a></li>          
+                            </ul>
+                        </nav>
+                    </div>
+                    <!-- //nav -->
                 </div>
-                <!-- //nav -->
             </div>
-        </div>
-    </header>
     <!-- //header -->
     <!-- inner banner -->
     <div class="inner-banner-amum-mkls d-flex flex-column justify-content-center align-items-center">
