--- a/trade.html
+++ b/trade.html
@@ -39,81 +39,83 @@
 <body>
     <!-- header -->
     <header id="home">
-        <div class="container">
-            <div class="header d-lg-flex justify-content-between align-items-center py-sm-3 py-2 px-sm-2 px-1">
+            <div class="container">
+              <div
+                class="header d-lg-flex justify-content-between align-items-center py-sm-3 py-2 px-sm-2 px-1"
+              >
                 <!-- logo -->
                 <div id="logo">
-                    <h1><a href="index.html"></a></h1>
+                  <h1><a href="index.html"></a></h1>
                 </div>
                 <!-- //logo -->
                 <!-- nav -->
                 <div class="nav_amum-mkls ml-lg-5">
-                    <nav>
-                        <label for="drop" class="toggle">Menu</label>
-                        <input type="checkbox" id="drop" />
-                        <ul class="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="portfolio.html">Historical Sites</a></li>
-                            <li>
-                                    <!-- First Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="#">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                        <li><a href="http://utpp.edu.mx/" class="drop-text">UTPP</a></li>
-                                        <li><a href="http://ceuno.com.mx/portal/" class="drop-text">CEUNO</a></li>
-                                        <li><a href="http://itspp.edu.mx/" class="drop-text">ITSPP</a></li>
-                                        <li><a href="https://contactanos.unidep.mx/" class="drop-text">UNIDEP</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <!-- Second Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="trade.html">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                        <li><a href="#Fishing & Food Processing" class="drop-text">Fishing/Food Processing</a></li>
-                                        <li><a href="#Industry" class="drop-text">Industry</a></li>
-                                        <li><a href="#Tourism" class="drop-text">Tourism</a></li>
-                                        <li><a href="#Commerce" class="drop-text">Commerce</a></li>
-                                        <li><a href="#Living" class="drop-text">Living</a></li>></li>
-                                    </ul>
-                                    <li>
-                                        <!-- third Tier Drop Down -->
-                                        <label for="drop-2" class="toggle toogle-2">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                        </label>
-                                        <a href="cultural.html">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                        <input type="checkbox" id="drop-2" />
-                                        <ul>
-                                            <li><a href="calendar.html" class="drop-text">Calendar</a></li>
-                                            <li><a href="gallery.html" class="drop-text">Galleries</a></li>
-                                            <li><a href="festivals.html" class="drop-text">Festivals</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                    <!-- Fourth Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                            <li><a href="#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
-                                            <li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
-                                            <li><a href="#City Directory" class="drop-text">City Directory</a></li>
-                                            <li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
-                                            <li><a href="#Mobile Consulate" class="drop-text">Mobile Consulate</a></li>
-                                    </ul>
-                                </li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <!-- //nav -->
-            </div>
-        </div>
+                  <nav>
+                      <label for="drop" class="toggle"> <span class="fa fa-bars"></span></label>
+                      <input type="checkbox" id="drop" />
+                      <ul class="menu">
+                          <li><a href="index.html">Home</a></li>
+                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="portfolio.html">Historical Sites</a></li>
+                          <li>
+                                  <!-- First Tier Drop Down -->
+                                  <label for="drop-2" class="toggle toogle-2">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                  </label>
+                                  <a href="#">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                  <input type="checkbox" id="drop-2" />
+                                  <ul>
+                                      <li><a href="http://utpp.edu.mx/" class="drop-text">UTPP</a></li>
+                                      <li><a href="http://ceuno.com.mx/portal/" class="drop-text">CEUNO</a></li>
+                                      <li><a href="http://itspp.edu.mx/" class="drop-text">ITSPP</a></li>
+                                      <li><a href="https://contactanos.unidep.mx/" class="drop-text">UNIDEP</a></li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  <!-- Second Tier Drop Down -->
+                                  <label for="drop-2" class="toggle toogle-2">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                  </label>
+                                  <a href="trade.html">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                  <input type="checkbox" id="drop-2" />
+                                  <ul>
+                                      <li><a href="trade.html#Fishing&FoodProcessing" class="drop-text">Fishing/Food Processing</a></li>
+                                      <li><a href="trade.html#Industry" class="drop-text">Industry</a></li>
+                                      <li><a href="trade.html#Tourism" class="drop-text">Tourism</a></li>
+                                      <li><a href="trade.html#Commerce" class="drop-text">Commerce</a></li>
+                                      <li><a href="trade.html#Living" class="drop-text">Living</a></li>></li>
+                                  </ul>
+                                  <li>
+                                      <!-- third Tier Drop Down -->
+                                      <label for="drop-2" class="toggle toogle-2">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                      </label>
+                                      <a href="cultural.html">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                      <input type="checkbox" id="drop-2" />
+                                      <ul>
+                                          <li><a href="calendar.html" class="drop-text">Calendar</a></li>
+                                          <li><a href="gallery.html" class="drop-text">Galleries</a></li>
+                                          <li><a href="festivals.html" class="drop-text">Festivals</a></li>
+                                      </ul>
+                                  </li>
+                                  <li>
+                                  <!-- Fourth Tier Drop Down -->
+                                  <label for="drop-2" class="toggle toogle-2">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                  </label>
+                                  <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                  <input type="checkbox" id="drop-2" />
+                                  <ul>
+                                          <li><a href="services.html#InmigrationAdvise" class="drop-text">Immigration Advise</a></li>
+                                          <li><a href="services.html#EmergencyAssistance" class="drop-text">Emergency Assistance</a></li>
+                                          <li><a href="services.html#CityDirectory" class="drop-text">City Directory</a></li>
+                                          <li><a href="services.html#OpeningaBussiness" class="drop-text">Opening a Bussiness</a></li>
+                                          <li><a href="services.html#MobileConsulate" class="drop-text">Mobile Consulate</a></li>
+                                  </ul>
+                              </li>
+                          <li><a href="contact.html">Contact Us</a></li>          
+                      </ul>
+                  </nav>
+              </div>
+              <!-- //nav -->
+          </div>
+      </div>
     </header>
     <!-- //header -->
     <!-- inner banner -->
@@ -151,7 +153,7 @@
                                     </div>
                                     <div class="col-9">
                                         <div class="abt-txt ml-0">
-                                            <div class="abt-txt ml-0"id="Fishing & Food Processing"></div>
+                                            <div class="abt-txt ml-0"id="Fishing&FoodProcessing"></div>
                                             <h4 class="amum-mkpvt-title">Fishing & Food Processing</h4>
                                             <p>When it comes to fishing and recreation activities in the sea, there
                                                are a vast list of options, from scuba diving, whale watching, educational tours or fishing trips on a
@@ -453,4 +455,15 @@
 
 </body>
 
+<script src="js/jquery-1.11.1.min.js"></script>
+<script>
+    $(document).ready(function() {
+        if (window.location.hash) {
+            var hash = window.location.hash;
+            $('html, body').animate({
+                scrollTop :  $(hash).offset().top
+            }, 500);
+        };
+    });
+</script>
 </html>
