--- a/calendar.html
+++ b/calendar.html
@@ -126,86 +126,42 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   </ul>
                 </li>
                 <li>
-                  <label for="drop-2" class="toggle toogle-2"
-                    >Trade Oportunities
-                    <span class="fa fa-angle-down" aria-hidden="true"></span>
+                  <!-- Second Tier Drop Down -->
+                  <label for="drop-2" class="toggle toogle-2">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span>
                   </label>
-                  <a href="trade.html"
-                    >Trade Oportunities
-                    <span class="fa fa-angle-down" aria-hidden="true"></span
-                  ></a>
+                  <a href="trade.html">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                   <input type="checkbox" id="drop-2" />
                   <ul>
-                    <li>
-                      <a href="#Fishing & Food Processing" class="drop-text"
-                        >Fishing/Food Processing</a
-                      >
-                    </li>
-                    <li><a href="#Industry" class="drop-text">Industry</a></li>
-                    <li><a href="#Tourism" class="drop-text">Tourism</a></li>
-                    <li><a href="#Commerce" class="drop-text">Commerce</a></li>
-                    <li><a href="#Living" class="drop-text">Living</a></li>
+                      <li><a href="trade.html#Fishing&FoodProcessing" class="drop-text">Fishing/Food Processing</a></li>
+                      <li><a href="trade.html#Industry" class="drop-text">Industry</a></li>
+                      <li><a href="trade.html#Tourism" class="drop-text">Tourism</a></li>
+                      <li><a href="trade.html#Commerce" class="drop-text">Commerce</a></li>
+                      <li><a href="trade.html#Living" class="drop-text">Living</a></li>></li>
                   </ul>
-                </li>
-
-                <li>
-                  <label for="drop-2" class="toggle toogle-2"
-                    >Cultural Events
-                    <span class="fa fa-angle-down" aria-hidden="true"></span>
+                  <li>
+                      <!-- third Tier Drop Down -->
+                      <label for="drop-2" class="toggle toogle-2">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span>
+                      </label>
+                      <a href="cultural.html">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                      <input type="checkbox" id="drop-2" />
+                      <ul>
+                          <li><a href="calendar.html" class="drop-text">Calendar</a></li>
+                          <li><a href="gallery.html" class="drop-text">Galleries</a></li>
+                          <li><a href="festivals.html" class="drop-text">Festivals</a></li>
+                      </ul>
+                  </li>
+                  <li>
+                  <!-- Fourth Tier Drop Down -->
+                  <label for="drop-2" class="toggle toogle-2">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span>
                   </label>
-                  <a href="cultural.html"
-                    >Cultural Events
-                    <span class="fa fa-angle-down" aria-hidden="true"></span
-                  ></a>
+                  <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                   <input type="checkbox" id="drop-2" />
                   <ul>
-                    <li>
-                      <a href="cultural.html" class="drop-text">Calendar</a>
-                    </li>
-                    <li>
-                      <a href="gallery.html" class="drop-text">Galleries</a>
-                    </li>
-                    <li>
-                      <a href="cultural.html" class="drop-text">Festivals</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <label for="drop-2" class="toggle toogle-2"
-                    >Services to US Residents
-                    <span class="fa fa-angle-down" aria-hidden="true"></span>
-                  </label>
-                  <a href="services.html"
-                    >Services to US Residents
-                    <span class="fa fa-angle-down" aria-hidden="true"></span
-                  ></a>
-                  <input type="checkbox" id="drop-2" />
-                  <ul>
-                    <li>
-                      <a href="#Inmigration Advise" class="drop-text"
-                        >Inmigration Advise</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#Emergency Assistance" class="drop-text"
-                        >Emergency Assistance</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#City Directory" class="drop-text"
-                        >City Directory</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#Opening a Bussiness" class="drop-text"
-                        >Opening a Bussiness</a
-                      >
-                    </li>
-                    <li>
-                      <a href="#Mobile Consulate" class="drop-text"
-                        >Mobile Consulate</a
-                      >
-                    </li>
+                          <li><a href="services.html#InmigrationAdvise" class="drop-text">Immigration Advise</a></li>
+                          <li><a href="services.html#EmergencyAssistance" class="drop-text">Emergency Assistance</a></li>
+                          <li><a href="services.html#CityDirectory" class="drop-text">City Directory</a></li>
+                          <li><a href="services.html#OpeningaBussiness" class="drop-text">Opening a Bussiness</a></li>
+                          <li><a href="services.html#MobileConsulate" class="drop-text">Mobile Consulate</a></li>
                   </ul>
                 </li>
                 <li><a href="contact.html">Contact Us</a></li>
