--- a/services.html
+++ b/services.html
@@ -40,82 +40,84 @@
 <body>
     <!-- header -->
     <header id="home">
-        <div class="container">
-            <div class="header d-lg-flex justify-content-between align-items-center py-sm-3 py-2 px-sm-2 px-1">
+            <div class="container">
+              <div
+                class="header d-lg-flex justify-content-between align-items-center py-sm-3 py-2 px-sm-2 px-1"
+              >
                 <!-- logo -->
                 <div id="logo">
-                    <h1><a href="index.html"></a></h1>
+                  <h1><a href="index.html"></a></h1>
                 </div>
                 <!-- //logo -->
                 <!-- nav -->
                 <div class="nav_amum-mkls ml-lg-5">
-                    <nav>
-                        <label for="drop" class="toggle">Menu</label>
-                        <input type="checkbox" id="drop" />
-                        <ul class="menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="portfolio.html">Historical Sites</a></li>
-                            <li>
-                                    <!-- First Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="#">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                        <li><a href="http://utpp.edu.mx/" class="drop-text">UTPP</a></li>
-                                        <li><a href="http://ceuno.com.mx/portal/" class="drop-text">CEUNO</a></li>
-                                        <li><a href="http://itspp.edu.mx/" class="drop-text">ITSPP</a></li>
-                                        <li><a href="https://contactanos.unidep.mx/" class="drop-text">UNIDEP</a></li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <!-- Second Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="trade.html">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                        <li><a href="#Fishing & Food Processing" class="drop-text">Fishing/Food Processing</a></li>
-                                        <li><a href="#Industry" class="drop-text">Industry</a></li>
-                                        <li><a href="#Tourism" class="drop-text">Tourism</a></li>
-                                        <li><a href="#Commerce" class="drop-text">Commerce</a></li>
-                                        <li><a href="#Living" class="drop-text">Living</a></li>></li>
-                                    </ul>
-                                    <li>
-                                        <!-- third Tier Drop Down -->
-                                        <label for="drop-2" class="toggle toogle-2">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                        </label>
-                                        <a href="cultural.html">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                        <input type="checkbox" id="drop-2" />
-                                        <ul>
-                                            <li><a href="cultural.html" class="drop-text">Calendar</a></li>
-                                            <li><a href="gallery.html" class="drop-text">Galleries</a></li>
-                                            <li><a href="festivals.html" class="drop-text">Festivals</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                    <!-- Fourth Tier Drop Down -->
-                                    <label for="drop-2" class="toggle toogle-2">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span>
-                                    </label>
-                                    <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
-                                    <input type="checkbox" id="drop-2" />
-                                    <ul>
-                                        <li><a href="#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
-                                        <li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
-                                        <li><a href="#City Directory" class="drop-text">City Directory</a></li>
-                                        <li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
-                                        <li><a href="#MobileConsulate" class="drop-text">Mobile Consulate</a></li>
-                                    </ul>
-                                </li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <!-- //nav -->
-            </div>
-        </div>
-    </header>
+                  <nav>
+                      <label for="drop" class="toggle"> <span class="fa fa-bars"></span></label>
+                      <input type="checkbox" id="drop" />
+                      <ul class="menu">
+                          <li><a href="index.html">Home</a></li>
+                          <li><a href="about.html">About Us</a></li>
+                          <li><a href="portfolio.html">Historical Sites</a></li>
+                          <li>
+                                  <!-- First Tier Drop Down -->
+                                  <label for="drop-2" class="toggle toogle-2">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                  </label>
+                                  <a href="#">Education Resources <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                  <input type="checkbox" id="drop-2" />
+                                  <ul>
+                                      <li><a href="http://utpp.edu.mx/" class="drop-text">UTPP</a></li>
+                                      <li><a href="http://ceuno.com.mx/portal/" class="drop-text">CEUNO</a></li>
+                                      <li><a href="http://itspp.edu.mx/" class="drop-text">ITSPP</a></li>
+                                      <li><a href="https://contactanos.unidep.mx/" class="drop-text">UNIDEP</a></li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  <!-- Second Tier Drop Down -->
+                                  <label for="drop-2" class="toggle toogle-2">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                  </label>
+                                  <a href="trade.html">Trade Oportunities <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                  <input type="checkbox" id="drop-2" />
+                                  <ul>
+                                      <li><a href="trade.html#Fishing&FoodProcessing" class="drop-text">Fishing/Food Processing</a></li>
+                                      <li><a href="trade.html#Industry" class="drop-text">Industry</a></li>
+                                      <li><a href="trade.html#Tourism" class="drop-text">Tourism</a></li>
+                                      <li><a href="trade.html#Commerce" class="drop-text">Commerce</a></li>
+                                      <li><a href="trade.html#Living" class="drop-text">Living</a></li>></li>
+                                  </ul>
+                                  <li>
+                                      <!-- third Tier Drop Down -->
+                                      <label for="drop-2" class="toggle toogle-2">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                      </label>
+                                      <a href="cultural.html">Cultural Events <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                      <input type="checkbox" id="drop-2" />
+                                      <ul>
+                                          <li><a href="calendar.html" class="drop-text">Calendar</a></li>
+                                          <li><a href="gallery.html" class="drop-text">Galleries</a></li>
+                                          <li><a href="festivals.html" class="drop-text">Festivals</a></li>
+                                      </ul>
+                                  </li>
+                                  <li>
+                                  <!-- Fourth Tier Drop Down -->
+                                  <label for="drop-2" class="toggle toogle-2">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span>
+                                  </label>
+                                  <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
+                                  <input type="checkbox" id="drop-2" />
+                                  <ul>
+                                          <li><a href="services.html#InmigrationAdvise" class="drop-text">Immigration Advise</a></li>
+                                          <li><a href="services.html#EmergencyAssistance" class="drop-text">Emergency Assistance</a></li>
+                                          <li><a href="services.html#CityDirectory" class="drop-text">City Directory</a></li>
+                                          <li><a href="services.html#OpeningaBussiness" class="drop-text">Opening a Bussiness</a></li>
+                                          <li><a href="services.html#MobileConsulate" class="drop-text">Mobile Consulate</a></li>
+                                  </ul>
+                              </li>
+                          <li><a href="contact.html">Contact Us</a></li>          
+                      </ul>
+                  </nav>
+              </div>
+              <!-- //nav -->
+          </div>
+      </div>
+          </header>
     <!-- //header -->
     <!-- inner banner -->
     <div class="inner-banner-amum-mkls d-flex flex-column justify-content-center align-items-center">
@@ -149,7 +151,7 @@
 							</div>
 							<div class="col-10">
 								<div class="abt-txt">
-                                    <div class="abt-txt ml-0"id="Immigration Advise"></div>
+                                    <div class="abt-txt ml-0"id="ImmigrationAdvise"></div>
 									<h4>Inmigration Advise</h4>
 									<p> In Mexico there are regulations for citizens of other countries living here. Most of the time US citizens do not stop to get  their tourist permit at the border and come directly to Rocky Point, as RP is considered a tourist destination. <br>
                                         If you are visiting Rocky Point for business we advise you to get your immigration document at the border. Mexican immigration law offers two categories for US citizens living in the country, as temporary or permanent residents. <br>
@@ -170,7 +172,7 @@
 						    </div>
 						    <div class="col-10">
 							    <div class="abt-txt">
-                                    <div class="abt-txt ml-0"id="Emergency Assistance"></div>
+                                    <div class="abt-txt ml-0"id="EmergencyAssistance"></div>
 								    <h4>Emergency Assistance</h4>
 								    <p> In you are in an emergency, call 911. If you have any questions around issues with the Mexican authorities, you can contact us and our staff will assist you with information.<br> 
                                         If you need an attorney, also you can contact us and we will help you with recommending the professional legal providers in town that can help you in your situation.</p>
@@ -191,7 +193,7 @@
                             </div>
                             <div class="col-10">
                                 <div class="abt-txt">
-                                    <div class="abt-txt ml-0"id="City Directory"></div>
+                                    <div class="abt-txt ml-0"id="CityDirectory"></div>
                                         <h4>City Directory</h4>
                                         <p> If you need to consult the city directory, you can access the following link to the official directory of Puerto Peñasco 
                                         <a href="http://puertopenasco.gob.mx/" class="btn-link">http://puertopenasco.gob.mx/</a></p>  
@@ -210,7 +212,7 @@
                             </div>
                             <div class="col-10">
                                 <div class="abt-txt">
-                                    <div class="abt-txt ml-0"id="Opening A Business"></div>
+                                    <div class="abt-txt ml-0"id="OpeningABusiness"></div>
                                     <h4>Opening A Business</h4>
                                     <p>Planning or working on setting up a bussiness in Rocky Point? We can help yoy, get in contact in <a href="mailto: info@azrptradetourism.com" class="btn-link">info@azrptradetourism.com</a> </p>
                                 </div>
