--- a/about.html
+++ b/about.html
@@ -166,48 +166,50 @@
                 <h4 class="amum-mkpvt-title">Services to US residents</h4>
             </div>
             <div class="row">
-				<div class="col-lg-6 my-3">
-					<div class="abt-grid">
-						<div class="row">
-							<div class="col-2">	
-								<div class="abt-icon">
-									<span class="fa fa-ravelry"></span>
-								</div>
-							</div>
-							<div class="col-10">
-								<div class="abt-txt">
-                                    <div class="abt-txt ml-0"id="Immigration Advise"></div>
-									<h4>Inmigration Advise</h4>
-									<p> In Mexico there are regulations for citizens of other countries living here. There is an Immigration office in town and you can do your filing online at www.inami.gob.mx or you can do it through an immigration consultant, who will guide through the application process<br></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-		    <div class="col-lg-6 my-3">
-					<div class="abt-grid">
-						<div class="row">
-							<div class="col-2">
-								<div class="abt-icon">
-									<span class="fa fa-ravelry"></span>
-								</div>
-							</div>
-							<div class="col-10">
-								<div class="abt-txt">
-                                    <div class="abt-txt ml-0"id="Emergency Assistance"></div>
-									<h4>Emergency Assistance</h4>
-									<p> If you are in an emergency, call 911. If you have any questions around issues with the Mexican authorities, you can contact us and our staff will assist you. 
-                                        If you need an attorney, we will help you with recommending the professional legal providers.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-			</div>
+                <div class="row">
+                        <div class="col-lg-6 my-3">
+                                <div class="abt-grid">
+                                    <div class="row">
+                                        <div class="col-1">	
+                                            <div class="abt-icon">
+                                                <span class="fa fa-ravelry"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-10">
+                                            <div class="abt-txt">
+                                                <div class="abt-txt ml-0"id="Immigration Advise"></div>
+                                                <h4>Immigration Advise</h4>
+                                                <p> In México there are regulations for citizens of other countries living here. There is an Immigration office in town and you can do your filing online at www.inami.gob.mx or you can do it through an immigration consultant, who will guide through the application process<br></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        <div class="col-lg-6 my-3">
+                                <div class="abt-grid">
+                                    <div class="row">
+                                        <div class="col-1">
+                                            <div class="abt-icon">
+                                                <span class="fa fa-ravelry"></span>
+                                            </div>
+                                        </div>
+                                        <div class="col-10">
+                                            <div class="abt-txt">
+                                                <div class="abt-txt ml-0"id="Emergency Assistance"></div>
+                                                <h4>Emergency Assistance</h4>
+                                                <p> If you are in an emergency, call 911. If you have any questions around issues with the Mexican authorities, you can contact us and our staff will assist you. 
+                                                    If you need an attorney, we will help you with recommending the professional legal providers.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        </div>
+                </div>	
             <div class="row">
                     <div class="col-lg-6 my-3">
                         <div class="abt-grid">
                             <div class="row">
-                                <div class="col-2">	
+                                <div class="col-1">	
                                     <div class="abt-icon">
                                         <span class="fa fa-ravelry"></span>
                                     </div>    
@@ -216,7 +218,7 @@
                                  <div class="abt-txt">
                                     <div class="abt-txt ml-0"id="City Directory"></div>
                                     <h4>City Directory</h4>
-                                    <p> If you need to consult the city directory, you can access the following link to the official directory of Puerto Peñasco http://puertopenasco.gob.mx/</p>
+                                    <p> If you need to consult the city directory, you can access the following link to the official directory of Puerto Peñasco <a href="http://puertopenasco.gob.mx/" class="btn-link">http://puertopenasco.gob.mx/</a></p> 
                                 </div>
                             </div>
                         </div>
@@ -225,7 +227,7 @@
             <div class="col-lg-6 my-3">
                     <div class="abt-grid">
                         <div class="row">
-                            <div class="col-2">
+                            <div class="col-1">
                                 <div class="abt-icon">
                                     <span class="fa fa-ravelry"></span>
                                 </div>
@@ -234,7 +236,7 @@
                                 <div class="abt-txt">
                                     <div class="abt-txt ml-0"id="Opening A Business"></div>
                                     <h4>Opening A Business</h4>
-                                    <p> Planning or working on setting up a bussiness in Rocky Point? We can help yoy, get in contact in info@azrptradetourism.com </p>
+                                    <p> Planning or working on setting up a bussiness in Rocky Point? We can help you, get in contact with us at <a href="mailto: info@azrptradetourism.com" class="btn-link">info@azrptradetourism.com</a> </p>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +245,7 @@
             <div class="col-lg-6 my-3">
                     <div class="abt-grid">
                         <div class="row">
-                            <div class="col-2">
+                            <div class="col-1">
                                 <div class="abt-icon">
                                     <span class="fa fa-ravelry"></span>
                                 </div>
