--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 			<div class="moa-tem_pvt_title text-center">
 				<h4 class="amum-mkpvt-title">Welcome</h4>
 				<p class="sub-title">Puerto Peñasco Sonora,also known as Rocky Point, located on the Gulf of California and Great Desert
-					of Altar, has been the major growing tourist destination in the north of Mexico, now receiving
+					of Altar, has been the major growing tourist destination in the north of México, now receiving
 					more than 2 million visitors a year.
 					It is just 60 miles south of the border of Lukeville Az and very popular for people from California,
-					Arizona, New Mexico, Nevada and Texas for their recreation activities.
+					Arizona, New México, Nevada and Texas for their recreation activities.
 					Thanks to its privileged location, the city has grown its industry in processing sea food products,
 					hand crafts, commercial business, real estate developments and of course tourist services, such as
 					restaurants, hotels and resorts. Come And Enjoy This Paradise.</p>
