--- a/services.html
+++ b/services.html
@@ -152,7 +152,7 @@
 							<div class="col-10">
 								<div class="abt-txt">
                                     <div class="abt-txt ml-0"id="ImmigrationAdvise"></div>
-									<h4>Inmigration Advise</h4>
+									<h4>Immigration Advise</h4>
 									<p> In Mexico there are regulations for citizens of other countries living here. Most of the time US citizens do not stop to get  their tourist permit at the border and come directly to Rocky Point, as RP is considered a tourist destination. <br>
                                         If you are visiting Rocky Point for business we advise you to get your immigration document at the border. Mexican immigration law offers two categories for US citizens living in the country, as temporary or permanent residents. <br>
                                         Both require a set of requirements and fees incur. There is an Immigration office in town and you can do your filing online at <a class="btn-link" href="http://www.inami.gob.mx">www.inami.gob.mx</a> or you can do it through an immigration consultant, who will guide through the through the application process.<br>
@@ -214,7 +214,7 @@
                                 <div class="abt-txt">
                                     <div class="abt-txt ml-0"id="OpeningABusiness"></div>
                                     <h4>Opening A Business</h4>
-                                    <p>Planning or working on setting up a bussiness in Rocky Point? We can help yoy, get in contact in <a href="mailto: info@azrptradetourism.com" class="btn-link">info@azrptradetourism.com</a> </p>
+                                    <p>Planning or working on setting up a bussiness in Rocky Point? We can help you, get in contact with us at <a href="mailto: info@azrptradetourism.com" class="btn-link">info@azrptradetourism.com</a> </p>
                                 </div>
                             </div>
                         </div>
