--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 								<a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
 								<input type="checkbox" id="drop-2" />
 								<ul>
-									<li><a href="services.html#Inmigration Advise" class="drop-text">Immigration Advise</a></li>
+									<li><a href="services.html#Immigration Advise" class="drop-text">Immigration Advise</a></li>
 									<li><a href="#Emergency Assistance" class="drop-text">Emergency Assistance</a></li>
 									<li><a href="#City Directory" class="drop-text">City Directory</a></li>
 									<li><a href="#Opening a Bussiness" class="drop-text">Opening a Bussiness</a></li>
