--- a/trade.html
+++ b/trade.html
@@ -102,7 +102,7 @@
                                   <a href="services.html">Services to US Residents <span class="fa fa-angle-down" aria-hidden="true"></span></a>
                                   <input type="checkbox" id="drop-2" />
                                   <ul>
-                                          <li><a href="services.html#InmigrationAdvise" class="drop-text">Immigration Advise</a></li>
+                                          <li><a href="services.html#ImmigrationAdvise" class="drop-text">Immigration Advise</a></li>
                                           <li><a href="services.html#EmergencyAssistance" class="drop-text">Emergency Assistance</a></li>
                                           <li><a href="services.html#CityDirectory" class="drop-text">City Directory</a></li>
                                           <li><a href="services.html#OpeningaBussiness" class="drop-text">Opening a Bussiness</a></li>
